# Google-Gen-Image-CLI

./: README.md  gemini_generate.py  imagen_generate.py  pyproject.toml
google_gen/: __init__.py  gemini_generate.py  imagen_generate.py  main.py  utils.py  veo_generate.py
google_gen/generators/: __init__.py  base_generator.py  gemini.py  gemini3.py  imagen.py  veo.py
